--- a/client/src/components/Button/index.module.css
+++ b/client/src/components/Button/index.module.css
@@ -1,9 +1,10 @@
 .button {
   border: 1px solid ;
   border-radius: 5px;
-  padding: 0.3rem 1rem;
+  padding: 1rem;
   color: #fff;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .delete {
